Changelog
=========

0.7
---

- Use GS profile dependency mechanism to install the Invoice package.
  [hannosch]

- Removed specialized login_next script, which didn't serve any purpose
  anymore and was causing errors on @@logindestination.
  [hannosch]

- Initial implementation.
  [jarn]

- Add a summary field to ExtropHours which can be used to describe the work
  in more detail. Add a new worklog report which shows an overview of all work
  using this information.
  [wichert]

0.4
---

- Restructure tests a bit and add more
  [elvix]

- Add project manager field to project schema
  [elvix]

0.3
---

- Start History recording
  [elvix]