@@ -1,61 +1,0 @@
-<?xml version="1.0"?>
-<object name="Memo"
-   meta_type="Factory-based Type Information with dynamic views"
-   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
- <property name="title">Memo</property>
- <property name="description">    Memo content type.
-      </property>
- <property name="content_icon">memo.png</property>
- <property name="content_meta_type">Memo</property>
- <property name="product">Memo</property>
- <property name="factory">addMemo</property>
- <property name="immediate_view">document_view</property>
- <property name="global_allow">True</property>
- <property name="filter_content_types">False</property>
- <property name="allowed_content_types"/>
- <property name="allow_discussion">True</property>
- <property name="default_view">memo_view</property>
- <property name="view_methods">
-  <element value="memo_view"/>
- </property>
- <property name="default_view_fallback">False</property>
- <alias from="(Default)" to="(dynamic view)"/>
- <alias from="edit" to="atct_edit"/>
- <alias from="index.html" to="(dynamic view)"/>
- <alias from="properties" to="base_metadata"/>
- <alias from="sharing" to="folder_localrole_form"/>
- <alias from="view" to="(selected layout)"/>
- <action title="View" action_id="view" category="object" condition_expr=""
-    url_expr="string:${object_url}" visible="True">
-  <permission value="View"/>
- </action>
- <action title="Edit" action_id="edit" category="object" condition_expr=""
-    url_expr="string:${object_url}/edit" visible="True">
-  <permission value="Modify portal content"/>
- </action>
- <action title="Properties" action_id="metadata" category="object"
-    condition_expr="" url_expr="string:${object_url}/properties"
-    visible="True">
-  <permission value="Modify portal content"/>
- </action>
- <action title="References" action_id="references" category="object"
-    condition_expr="object/archetype_tool/has_graphviz"
-    url_expr="string:${object_url}/reference_graph" visible="True">
-  <permission value="Modify portal content"/>
-  <permission value="Review portal content"/>
- </action>
- <action title="History" action_id="history" category="object"
-    condition_expr="" url_expr="string:${object_url}/atct_history"
-    visible="False">
-  <permission value="ATContentTypes: View history"/>
- </action>
- <action title="External Edit" action_id="external_edit" category="object"
-    condition_expr="object/externalEditorEnabled"
-    url_expr="string:${object_url}/external_edit" visible="False">
-  <permission value="Modify portal content"/>
- </action>
- <action title="Sharing" action_id="local_roles" category="object"
-    condition_expr="" url_expr="string:${object_url}/sharing" visible="True">
-  <permission value="Manage properties"/>
- </action>
-</object>
